--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.4.4",
@@ -50,5 +51,4 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   }
- 
 }
